# sharestats-leo-notfork

./: .gitignore  .mockenv  .pre-commit-config.yaml  .renvignore  README.md  alembic.ini  data_conversion.py  dev.in  dev.txt  logging_config.py  pyproject.toml  requirements.in  requirements.txt
.docker/: postgres-compose.yaml
.github/workflows/: tests.yml
2023data/: .gitattributes  Manually labelled pubs from NIMH IRP 2023.xlsx  Manually_labelled_pubs_NIMH_IRP_2023.csv  data_code_rtransparent2023.csv  nimh_ipids.csv  one_hot_types.csv  pmids2023.csv  pmids2023_articles.csv  pmids2023_articles_nimh.csv  pmids2023_nimh.csv
2023scripts/: get_ipids.py  get_pmids.py  get_pmids_articles.py  nimh_report.sh  pdfs_download_metapub.py
alembic/: env.py
data/: ipids.csv  oa_urls.csv  pmids.csv  pmids_articles.csv  sharestats_backend.ipynb
dockers/: docker-compose.yml
dsst_etl/: .env.example  README.md  __init__.py  _utils.py  config.py  db.py  elt_script.py  extract.py  load.py  models.py  pyproject.toml  transform.py  upload_pdfs.py
dsst_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dsst_etl/dsst_etl/: __init__.py  config.py  load.py
scripts/: annual_parser.py  get_ipids.py  get_pmids.py  get_pmids_articles.py  ingest_pdfs.py  openalex_api.py  openalex_api_optimized.py  openalex_flatten_works.py  openalex_psql_insert.py  openalex_psql_openaccess.py  pdf_inventory.py  pdfs_download.py  pdfs_download_metapub.py  pdfs_to_text.py  rtransparent.r  rtransparent_runner.r  run_upload_pdf_to_s3.py  set_pivot_table.py  xml_articles.py
sql-create/: openalex_create_db.py  openalex_create_db.sql
sql-scripts/: create-tables.sql
tests/: test_db_init.py
(+3 files in other folders)
